--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             <div class="text_wrapper">
                 <img src="a8.png" alt="">
                 <div class="text">
-                    宝宝~你愿意嫁给我么~？
+                    Làm người yêu anh nhé~？
                 </div>
             </div>
         </div>
@@ -68,11 +68,14 @@
     <img src="moon.png" alt="" id="moon" style="visibility: hidden;" />
     <div style="display:none">
         <div class="shape">
-            刘嘉欣
+            Nguyễn Thị Mỹ Duyên
         </div>
         <div class="shape">
-            我爱你
+            Anh Yêu Em
         </div>
+        div class="shape">
+            ❣️
+    </div>
     </div>
     <!--音乐部分-->
     <audio autoplay loop id="music">
