--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
 
-    <title>宝宝</title>
+    <title>❣️</title></title>
     <meta name="language" content="zh-CN">
     <meta name="title" content="小宝宝">
     <meta name="github" content="https://github.com/sun0225SUN/Awesome-Love-Code">
@@ -53,9 +53,9 @@
         </div>
         <div class="btn-groups">
             <div class="heart-btn">
-                <div id="yes" class="btn btn-a"><span>愿意</span></div>
+                <div id="yes" class="btn btn-a"><sspan>Đồng ý</sspan></span></div>
             </div>
-            <div id="no" class="btn btn-b"><span>不愿意</span></div>
+            <div id="no" class="btn btn-b"><span>Không đồng ý</span></div>
         </div>
     </div>
     <!--烟花部分-->
